@@ -4,6 +4,8 @@ openmediavault (6.3.11-1) stable; urgency=low
   * Upgrade Salt to version 3005.1.
   * Issue #1485: Add option to enforce transport encryption per SMB
     share. Defaults to disabled.
+  * Issue #1542: Add transmit hash policy support to bond network
+    interfaces.
 
  -- Volker Theile <volker.theile@openmediavault.org> Tue, 25 Apr 2023 19:09:12 +0200
 
